[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Src/Actors/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Src/Components/PlatformerMovementComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Components/HealthComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Components/HurtboxComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Components/HitboxComponent.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlatformerMovementComponent" parent="." instance=ExtResource( 3 )]

[node name="HealthComponent" parent="." instance=ExtResource( 4 )]

[node name="HurtboxComponent" parent="." instance=ExtResource( 5 )]
collision_layer = 16

[node name="HitboxComponent" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource( 2 )
[connection signal="no_health" from="HealthComponent" to="." method="_on_HealthComponent_no_health"]
[connection signal="area_entered" from="HurtboxComponent" to="." method="_on_HurtboxComponent_area_entered"]

[editable path="HitboxComponent"]
